--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -2,6 +2,7 @@
 $white: #ffffff;
 $black: #000000;
 $medium-black: #424242;
+$darkslate-grey: #333333;
 $light-grey: #f4f4f4;
 $medium-grey: #dedede;
 $light-orange: #F0A500;
