--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -44,16 +44,16 @@
     --color-app-background: #{$black};
 
     // App bar and Footer
-    --color-footer-background: #{$medium-black};
-    --color-app-bar-background: #{$medium-black};
+    --color-footer-background: #{$darkslate-grey};
+    --color-app-bar-background: #{$darkslate-grey};
 
     // Card
     --color-card-shadow: 255, 255, 255;
 
     // Navigations
-    --color-nav-drawer-background: #{$medium-black};
+    --color-nav-drawer-background: #{$darkslate-grey};
     --color-nav-drawer-menu-hover: rgba(0, 0, 0, 0.5);
-    --color-nav-dropdown-background: #{$medium-black};
+    --color-nav-dropdown-background: #{$darkslate-grey};
     --color-nav-dropdown-shadow: 255, 255, 255;
     --color-nav-dropdown-menu-hover: rgba(0, 0, 0, 0.5);
 
