--- a/src/views/detail-view/restaurant-menus/restaurant-menus.scss
+++ b/src/views/detail-view/restaurant-menus/restaurant-menus.scss
@@ -11,6 +11,7 @@ restaurant-menus {
             text-align: center;
             text-transform: capitalize;
             padding: 1.5rem;
+            word-break: break-word;
         }
 
         &__item {
@@ -21,6 +22,7 @@ restaurant-menus {
             list-style-type: none;
             text-transform: capitalize;
             border-bottom: 0.5px solid var(--color-text-subtle);
+            word-break: break-word;
         }
     }
 
